--- a/index.html
+++ b/index.html
@@ -4,8 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
     <h1>Bienvenidos a los formularios 📝</h1>
+
+
+    <form class="bg-info w-50 mx-auto p-5 text-white rounded-4 shadow-lg">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text  text-white">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+
+
+
+    <form >
+        
+        <fieldset>
+            <legend>Datos cliente</legend>
+
+            <div>
+                <label for="name">Nombre</label>
+                <input type="text" id="name" name="name" placeholder="ingresa tu nombre">
+            </div>
+            <div>
+                <label for="email">Correo</label>
+                <input type="email" id="email" name="email" placeholder="ingresa tu correo">
+            </div>
+            <div>
+                <label for="clave">clave</label>
+                <input type="password" id="clave" name="clave" placeholder="ingresa tu clave">
+            </div>
+        </fieldset>
+        <div>
+            <h4>Envio</h4>
+            <label for="express">express</label>
+            <input type="radio" name="envio" id="express">
+            <br>
+            <label for="normal">normal</label>
+            <input type="radio" name="envio" id="normal">
+            <br>
+            <label for="programado">programado</label>
+            <input type="radio" name="envio" id="programado">
+            <h4>Alistamiento</h4>
+            <label for="express">express</label>
+            <input type="radio" name="alis" id="express">
+            <br>
+            <label for="normal">normal</label>
+            <input type="radio" name="alis" id="normal">
+        </div>
+
+        <div>
+            <select name="pago" id="pago">
+                <option value="cre">Tarjeta credito</option>
+                <option value="deb">Tarjeta debito</option>
+                <option value="cash">Efectivo</option>
+            </select>
+        </div>
+
+
+
+        <div>
+            <button type="submit">enviar</button>
+            <button type="reset">reset</button>
+            <button type="button">button</button>
+        </div>
+    </form>
 </body>
 </html>
